scss/content/typography.scss
@import "../configuration/index";

.typo {
    & > p,
    & > ul,
    & > dl,
    & > ol {
        font-style: normal;
        font-family: $font-main;
        font-feature-settings: "kern", "onum", "liga";
    }

    & > p {
        @include responsive-type(1rem, 1rem, $font-size);
    }

    & > ul,
    & > dl,
    & > ol {
        line-height: 2rem;

        padding: 0 1rem;
        margin: 0 0 1rem 0;
    }

    & > h1, & > h2, & > h3, & > h4, & > h5,& >  h6,
    & > .h1, & > .h2, & > .h3, & > .h4, & > .h5, & > .h6 {
        margin: 0;
        padding: 0;

        font-style: normal;
        font-family: $font-head;
        font-feature-settings: "dlig", "liga", "lnum", "kern";

        text-rendering: geometricPrecision;
    }

    & > h1, & > .h1 {
        @include responsive-type(2rem, 3.5rem, $font-size);
    }

    & > h2, & > .h2 {
        @include responsive-type(2rem, 3rem, $font-size);
    }

    & > h3, & > .h3 {
        @include responsive-type(2rem, 2.5rem, $font-size);
    }

    & > h4, & > .h4 {
        @include responsive-type(2rem, 2rem, $font-size);
    }

    & > h5, & > .h5 {
        @include responsive-type(2rem, 1.5rem, $font-size);
    }

    & > h6, & > .h6 {
        @include responsive-type(1rem, 1rem, $font-size);
    }

    b, strong {
        font-weight: 900;
    }

    em, i {
        font-style: italic;
    }

    mark {
        background-color: rgba(yellow, .35);
        padding: 0 .5rem;

        border-bottom-width: 2px;
        border-bottom-style: solid;
        border-bottom-color: rgba(yellow, .65);
    }

    abbr {
        border-bottom-width: 1px;
        border-bottom-style: dashed;
    }

    table {
        font-feature-settings: "liga", "lnum", "tnum", "kern";
    }
}

